ingress/ingress-https/6.nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx-ingress-controller
spec:
  replicas: 1
  revisionHistoryLimit: 3
  template:
    metadata:
      labels:
        app: nginx-ingress-lb
    spec:
      terminationGracePeriodSeconds: 60
      serviceAccount: nginx
      containers:
        - name: nginx-ingress-controller
          image: quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.9.0
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              path: /healthz
              port: 10254
              scheme: HTTP
          livenessProbe:
            httpGet:
              path: /healthz
              port: 10254
              scheme: HTTP
            initialDelaySeconds: 10
            timeoutSeconds: 5
          args:
            - /nginx-ingress-controller
            - --default-backend-service=$(POD_NAMESPACE)/default-backend
            - --configmap=$(POD_NAMESPACE)/nginx-ingress-controller-conf
            - --default-ssl-certificate=$(POD_NAMESPACE)/tls-certificate
            - --v=2
          ports:
            - containerPort: 80
            - containerPort: 18080
            - containerPort: 443
              name: https
              protocol: TCP
          volumeMounts: 
            - mountPath: /etc/nginx-ssl/dhparam
              name: tls-dhparam-vol

      terminationGracePeriodSeconds: 60
      volumes: 
        - name: tls-dhparam-vol
          secret: 
            secretName: tls-dhparam
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress
spec:
  type: NodePort
  ports:
    - port: 80
      nodePort: 30000
      name: http
    - port: 18080
      nodePort: 32000
      name: http-mgmt
    - name: https
      port: 443
      targetPort: https
  selector:
    app: nginx-ingress-lb
