ingress/ingress-https/7.app-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: app-ingress
spec:
  tls:
    - hosts:
      - master.boygruv.lc
      secretName: tls-certificate
  rules:
  - http:
      paths:
      - backend:
          serviceName: appsvc1
          servicePort: 80
        path: /app1
      - backend:
          serviceName: appsvc2
          servicePort: 80
        path: /app2
      - backend:
          serviceName: nginx-ingress
          servicePort: 18080
        path: /nginx_status
